--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <div class="cv-container">
         <div class="header">
-            <img src="fotocv.png" alt="Foto Alexander William">
+            <img src="fotocv.png" alt="Foto Riki Audy Bin Ghozali">
             <h1>Riki Audy Bin Ghozali</h1>
             <h2>23082010011</h2>
         </div>
